<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="preference_user_id">user_id</string>
    <string name="users_products">users_products</string>
    <string name="app_name">Smart-Receipt</string>
    <string name="action_settings">Settings</string>
    <string name="action_overflow">Overflow</string>
    <string name="action_search">Search</string>
    <string name="action_logout">Logout</string>
    <string name="heading">The easy way to:</string>

    <!-- Title and heading strings -->

    <string name="title_activity_budget">Control your budget</string>
    <string name="heading_activity_budget">Select your preferences</string>
    <string name="heading_activity_budget_list">Budget list</string>
    
    <string name="title_activity_add_family">Unite the family</string>
    <string name="heading_add_family_member">Add a family member</string>
    
    <string name="title_activity_save">Save your receipts</string>
    <string name="heading_activity_save">Fill in the fields</string>
    
    <string name="title_activity_login">Login</string>
    
    <string name="title_activity_search">Search your transactions</string>
    <string name="heading_search_selection">Search selection</string>
    <string name="heading_search_results">Search results</string>
    <string name="heading_search_diagrams">Search chart</string>
    <string name="title_search_results">Search results</string>
    
    <string name="title_activity_map">Find associated stores</string>
    
    <string name="title_activity_list">Make a shopping list</string>
    <string name="heading_activity_list">Products list</string>

    <!-- colors -->

    <color name="light_blue">#59B6E5</color>
    <color name="white_transparent">#80FFFFFF</color>
    <color name="yellow">#EED377</color>
    <color name="blue">#76B8F1</color>
    <color name="light_green">#78EC7C</color>
    <color name="brown">#A89672</color>
    <color name="light_red">#DF2B00</color>
    <color name="purple">#BE7DE8</color>

    <!-- Strings of activity_main -->

    <string name="link1">Save</string>
    <string name="text1">your receipts</string>
    <string name="text2">Control your</string>
    <string name="link2">budget</string>
    <string name="link3">Search</string>
    <string name="text3">your transactions</string>
    <string name="text4">Know the latest</string>
    <string name="link4">offers</string>
    <string name="text5">Unite the</string>
    <string name="link5">family</string>
    <string name="text6">Make a shopping</string>
    <string name="link6">list</string>
    <string name="text7">Find associated</string>
    <string name="link7">stores</string>

    <!-- Strings of activity_budget -->

    <string name="spend_limit">How much money do you want to spend? (e.g. 1.10)</string>
    <string name="from_date">From date</string>
    <string name="until_date">Until date</string>
    <string name="same_on">Same on</string>
    <string name="category_prompt">Expenses category</string>
    <string name="family_prompt">Family member</string>
    <string name="euro">€</string>
    <string name="exp_category_hint">category</string>
    <string name="limit_hint">spend limit</string>
    <string name="start_date_hint">start date</string>
    <string name="end_date_hint">end date</string>

    <!-- Strings of activity_save -->

    <string name="product_name">Product name</string>
    <string name="purchase_date">Purchase date</string>
    <string name="price">Price (e.g. 1.10)</string>
    <string name="store">Store VAT number (Optional)</string>
    <string name="added_products">Products added:</string>

    <!-- Strings of activity_login -->

    <string name="email">Email: user@example.com</string>
    <string name="password">password</string>
    <string name="login">Login</string>

    <!-- Strings of activity_search -->

    <string name="product">Keyword-Product name</string>
    <string name="min_cost">Product min cost</string>
    <string name="max_cost">Product max cost</string>
    <string name="search_start_date">Start date</string>
    <string name="search_end_date">End date</string>
    <string name="search_store">Store VAT number</string>
    <string name="group_by_prompt">Group by</string>

    <string-array name="group_by_array">
        <item>Group by</item>
        <item>Category</item>
        <item>Store</item>
        <item>Family member</item>
    </string-array>

    <string name="total_cost">Total Cost:</string>
    <string name="name_hint">name</string>
    <string name="price_hint">price</string>
    <string name="purchase_date_hint">purchase date</string>
    <string name="category_hint">category</string>
    <string name="store_hint">store</string>

    <!-- Strings of activity_search -->
    
    <string name="add_product_string">Product to be added</string>
    
    <!-- Button strings -->

    <string name="submit">Submit</string>
    <string name="add">Add</string>
    <string name="add_product">Add product</string>
    <string name="reset">Reset</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="scan">Scan</string>
    <string name="diagrams">Diagrams</string>
    <string name="delete">Delete</string>
    <string name="add_budget">Add budget</string>
    <string name="graph">Graph</string>

    <!-- Pop up message strings -->

    <string name="not_a_price">There is an error in your input! Price must be a number.</string>
    <string name="not_a_number">There is an error in your input! Your spend limit must be a number.</string>
    <string name="not_a_mail">There is an error in your input! Your email format is not valid.</string>
    <string name="no_family">There is an error in your input! No family member was selected. If you don\'t want any please uncheck "same on".</string>
    <string name="no_user">No user was found with these data!</string>
    <string name="no_input">You haven\'t filled all the required fields!</string>
    <string name="no_connection">It is the first time you attempt to log in. You must connect to the Internet!</string>
    <string name="missing_input">All the fields are empty!</string>
    <string name="no_family_members_add">Currently you don\'t have any family members in your list. Please add more!</string>
    <string name="success">Your data has been saved successfully!</string>
    <string name="delete_success">Your budget(s) has been deleted successfully!</string>
    <string name="unckecked_budgets">No budget(s) was selected for deletion!</string>
    <string name="budget_delete_error">There was an error during the deletion of your budget! Please try again.</string>
    <string name="budget_save_error">There was an error during the saving of your budget! Please try again.</string>
    <string name="product_save_error">There was an error during the saving of your products! Please try again.</string>
    <string name="added">Your product has been added successfully!</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="no_results">There are no results for these data!</string>

</resources>