<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity" >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="80dp"
        android:paddingTop="@dimen/drawable_horizontal_margin"
        android:background="#59B6E5"
        android:text="@string/heading_search_selection"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#fff" />
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin">
	    
	    <EditText
	        android:id="@+id/product_name"
	        android:layout_width="match_parent"
	        android:layout_height="68dp"
	        android:hint="@string/product"
	        android:paddingLeft="@dimen/activity_horizontal_margin"
	        android:paddingRight="@dimen/activity_horizontal_margin"
	        android:paddingTop="@dimen/activity_vertical_margin" />
	    
	    <Spinner
	        android:id="@+id/category_spinner"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
		    android:paddingLeft="@dimen/activity_horizontal_margin"
		    android:paddingRight="@dimen/activity_horizontal_margin"
		    android:paddingTop="@dimen/activity_vertical_margin"
		    android:prompt="@string/category_prompt" />
	    
	    
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    tools:context=".SearchActivity$SelectionSectionFragment"
		    android:orientation="horizontal" >
		    
		    <EditText
		        android:id="@+id/min_cost"
		        android:layout_width="136dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.02"
		        android:hint="@string/min_cost"
		        android:paddingLeft="@dimen/activity_horizontal_margin"
		        android:paddingRight="@dimen/activity_horizontal_margin"
		        android:paddingTop="@dimen/activity_vertical_margin" />
		
		    <EditText
		        android:id="@+id/max_cost"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.17"
		        android:hint="@string/max_cost"
		        android:paddingLeft="@dimen/activity_horizontal_margin"
		        android:paddingRight="@dimen/activity_horizontal_margin"
		        android:paddingTop="@dimen/activity_vertical_margin" />
		  
		</LinearLayout>
	
	   	<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    tools:context=".SearchActivity$SelectionSectionFragment"
		    android:orientation="horizontal" >
		    
		    <EditText
		        android:id="@+id/search_start_date"
		        android:layout_width="136dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.02"
		        android:clickable="true"
		        android:focusableInTouchMode="false"
		        android:hint="@string/search_start_date"
		        android:paddingLeft="@dimen/activity_horizontal_margin"
		        android:paddingRight="@dimen/activity_horizontal_margin"
		        android:paddingTop="@dimen/activity_vertical_margin" />
		
		    <EditText
		        android:id="@+id/search_end_date"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.17"
		        android:hint="@string/search_end_date"
		        android:paddingLeft="@dimen/activity_horizontal_margin"
		        android:paddingRight="@dimen/activity_horizontal_margin"
		        android:paddingTop="@dimen/activity_vertical_margin"
		        android:focusableInTouchMode="false"
		        android:clickable="true" />
		  
		</LinearLayout>
		
	    <EditText
	        android:id="@+id/search_store"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/search_store"
	        android:paddingLeft="@dimen/activity_horizontal_margin"
	        android:paddingRight="@dimen/activity_horizontal_margin"
	        android:paddingTop="@dimen/activity_vertical_margin" />
	    
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    tools:context=".SearchActivity$SelectionSectionFragment"
		    android:orientation="horizontal" >
		    
		    <Spinner
		        android:id="@+id/family_spinner"
		        android:layout_width="136dp"
		        android:layout_height="wrap_content"
		        android:paddingLeft="@dimen/activity_horizontal_margin"
		        android:paddingRight="@dimen/activity_horizontal_margin"
		        android:paddingTop="@dimen/activity_vertical_margin"
		        android:prompt="@string/family_prompt" />
		    
		    <Spinner
		        android:id="@+id/group_by_spinner"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.17"
		        android:prompt="@string/group_by_prompt"
		        android:paddingLeft="@dimen/activity_horizontal_margin"
		        android:paddingRight="@dimen/activity_horizontal_margin"
		        android:paddingTop="@dimen/activity_vertical_margin" />
	    
	    </LinearLayout>
	    
	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="143dp"
	        android:paddingLeft="@dimen/activity_horizontal_margin"
	        android:paddingRight="@dimen/activity_horizontal_margin"
	        tools:context=".BudgetActivity" >
	
		    <Button
		        android:id="@+id/submit"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:layout_alignParentTop="true"
		        android:layout_marginTop="16dp"
		        android:text="@string/submit" />
	
		    <Button
		        android:id="@+id/reset"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBaseline="@+id/submit"
		        android:layout_alignBottom="@+id/submit"
		        android:layout_toLeftOf="@+id/submit"
		        android:text="@string/reset" />
	
	    </RelativeLayout>
    </LinearLayout>
</LinearLayout>

