<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="80dp"
        android:text="@string/heading_save"
        android:textSize="20sp"
        android:textStyle="bold" />
       
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#000000" />
    
    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:prompt="@string/category_prompt" />
    
    <EditText
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
        android:hint="@string/product_name" />
    
    <EditText
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" />
    
    <EditText
        android:id="@+id/purchase_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/purchase_date"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:focusableInTouchMode="false"
        android:clickable="true" />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="143dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".SaveActivity" >

	    <Button
	        android:id="@+id/save_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginTop="16dp"
	        android:text="@string/save" />

	    <Button
	        android:id="@+id/scan_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/save_button"
	        android:layout_alignBottom="@+id/save_button"
	        android:layout_alignParentLeft="true"
	        android:onClick="scanReceipt"
	        android:text="@string/scan" />

	    <Button
	        android:id="@+id/reset_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/save_button"
	        android:layout_alignBottom="@+id/save_button"
	        android:layout_toLeftOf="@+id/save_button"
	        android:text="@string/reset" />
    
    </RelativeLayout>

</LinearLayout>