<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <LinearLayout
	    android:layout_width="35dp"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:background="@color/light_blue"
	    tools:context=".MainActivity" >
	    
		<ImageView
    		android:paddingTop="43dp"
		    android:paddingLeft="@dimen/drawable_horizontal_margin"
		    android:paddingRight="@dimen/drawable_horizontal_margin"
			android:layout_width="wrap_content"
			android:layout_height="93dp"
			android:src="@drawable/save" >
		</ImageView>
		
		<ImageView
    		android:paddingTop="7dp"
		    android:paddingLeft="@dimen/drawable_horizontal_margin"
		    android:paddingRight="@dimen/drawable_horizontal_margin"
			android:layout_width="wrap_content"
			android:layout_height="55dp"
			android:src="@drawable/budget" >
		</ImageView>
		
		<ImageView
    		android:paddingTop="7dp"
		    android:paddingLeft="@dimen/drawable_horizontal_margin"
		    android:paddingRight="@dimen/drawable_horizontal_margin"
			android:layout_width="wrap_content"
			android:layout_height="55dp"
			android:src="@drawable/search" >
		</ImageView>
		
		<ImageView
    		android:paddingTop="7dp"
		    android:paddingLeft="@dimen/drawable_horizontal_margin"
		    android:paddingRight="@dimen/drawable_horizontal_margin"
			android:layout_width="wrap_content"
			android:layout_height="55dp"
			android:src="@drawable/offers" >
		</ImageView>
		
		<ImageView
    		android:paddingTop="7dp"
		    android:paddingLeft="@dimen/drawable_horizontal_margin"
		    android:paddingRight="@dimen/drawable_horizontal_margin"
			android:layout_width="wrap_content"
			android:layout_height="55dp"
			android:src="@drawable/family" >
		</ImageView>
		
		<ImageView
    		android:paddingTop="7dp"
		    android:paddingLeft="@dimen/drawable_horizontal_margin"
		    android:paddingRight="@dimen/drawable_horizontal_margin"
			android:layout_width="wrap_content"
			android:layout_height="55dp"
			android:src="@drawable/list" >
		</ImageView>
		
		<ImageView
    		android:paddingTop="7dp"
		    android:paddingLeft="@dimen/drawable_horizontal_margin"
		    android:paddingRight="@dimen/drawable_horizontal_margin"
			android:layout_width="wrap_content"
			android:layout_height="55dp"
			android:src="@drawable/map" >
		</ImageView>
		
    </LinearLayout>
    
	<LinearLayout
	    android:layout_width="0dp"
	    android:layout_height="match_parent"
	    android:layout_weight="1"
	    android:orientation="vertical"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    tools:context=".MainActivity" >
	
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:paddingBottom="@dimen/activity_vertical_margin"
		    android:paddingLeft="@dimen/activity_horizontal_margin"
		    android:paddingRight="@dimen/activity_horizontal_margin"
		    tools:context=".MainActivity" >
		    
		    <TextView
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:textSize="20sp"
		        android:textStyle="bold"
		        android:text="@string/heading" />
		
		</LinearLayout>
		
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:paddingBottom="@dimen/activity_vertical_margin"
		    android:paddingLeft="@dimen/activity_horizontal_margin"
		    android:paddingRight="@dimen/activity_horizontal_margin"
		    android:paddingTop="@dimen/activity_vertical_margin"
		    tools:context=".MainActivity" >
		    
		    <TextView
		        android:layout_width="50dp"
		        android:layout_height="wrap_content"
		        android:textSize="19sp"
		        android:text="@string/link1"
		        android:textStyle="italic"
		        android:clickable="true"
		        android:onClick="goToSave" />
	    			    
		    <TextView
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		    	android:layout_weight="1"
		        android:textSize="17sp"
		        android:text="@string/text1" />
		    
	    </LinearLayout>
	    	
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:paddingBottom="@dimen/activity_vertical_margin"
		    android:paddingLeft="@dimen/activity_horizontal_margin"
		    android:paddingRight="@dimen/activity_horizontal_margin"
		    android:paddingTop="@dimen/activity_vertical_margin"
		    tools:context=".MainActivity" >
		
		    <TextView
		        android:layout_width="103dp"
		        android:layout_height="wrap_content"
		        android:textSize="17sp"
		        android:text="@string/text2" />
		    
		    <TextView
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		    	android:layout_weight="1"
		        android:textSize="19sp"
		        android:text="@string/link2"
		        android:textStyle="italic"
		        android:clickable="true"
		        android:onClick="goToBudget" />
	    
	    </LinearLayout>
	    
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:paddingBottom="@dimen/activity_vertical_margin"
		    android:paddingLeft="@dimen/activity_horizontal_margin"
		    android:paddingRight="@dimen/activity_horizontal_margin"
		    android:paddingTop="@dimen/activity_vertical_margin"
		    tools:context=".MainActivity" >
		    
		    <TextView
		        android:layout_width="68dp"
		        android:layout_height="wrap_content"
		        android:textSize="19sp"
		        android:text="@string/link3"
		        android:textStyle="italic"
		        android:clickable="true"
		        android:onClick="goToSearch" />
		    
		    <TextView
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		    	android:layout_weight="1"
		        android:text="@string/text3"
		        android:textSize="17sp" />
		    
		</LinearLayout>
		    
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:paddingBottom="@dimen/activity_vertical_margin"
		    android:paddingLeft="@dimen/activity_horizontal_margin"
		    android:paddingRight="@dimen/activity_horizontal_margin"
		    android:paddingTop="@dimen/activity_vertical_margin"
		    tools:context=".MainActivity" >
		    
		    <TextView
		        android:layout_width="128dp"
		        android:layout_height="wrap_content"
		        android:text="@string/text4"
		        android:textSize="17sp" />
		    
		    <TextView
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		    	android:layout_weight="1"
		        android:textSize="19sp"
		        android:text="@string/link4"
		        android:textStyle="italic"
		        android:clickable="true"
		        android:onClick="goToOffers" />
		    
		</LinearLayout>
		    
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:paddingBottom="@dimen/activity_vertical_margin"
		    android:paddingLeft="@dimen/activity_horizontal_margin"
		    android:paddingRight="@dimen/activity_horizontal_margin"
		    android:paddingTop="@dimen/activity_vertical_margin"
		    tools:context=".MainActivity" >
		    
		    <TextView
		        android:layout_width="78dp"
		        android:layout_height="wrap_content"
		        android:text="@string/text5"
		        android:textSize="17sp" />
		    
		    <TextView
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		    	android:layout_weight="1"
		        android:textSize="19sp"
		        android:text="@string/link5"
		        android:textStyle="italic"
		        android:clickable="true"
		        android:onClick="goToFamily" />
		    	   	
		</LinearLayout>
		
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:paddingBottom="@dimen/activity_vertical_margin"
		    android:paddingLeft="@dimen/activity_horizontal_margin"
		    android:paddingRight="@dimen/activity_horizontal_margin"
		    android:paddingTop="@dimen/activity_vertical_margin"
		    tools:context=".MainActivity" >
		    
		    <TextView
		        android:layout_width="142dp"
		        android:layout_height="wrap_content"
		        android:textSize="17sp"
		        android:text="@string/text6" />
		    
		    <TextView
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		    	android:layout_weight="1"
		        android:textSize="19sp"
		        android:text="@string/link6"
		        android:textStyle="italic"
		        android:clickable="true"
		        android:onClick="goToList" />
		    
		</LinearLayout>
		
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:paddingBottom="@dimen/activity_vertical_margin"
		    android:paddingLeft="@dimen/activity_horizontal_margin"
		    android:paddingRight="@dimen/activity_horizontal_margin"
		    android:paddingTop="@dimen/activity_vertical_margin"
		    tools:context=".MainActivity" >
		    
		    <TextView
		        android:layout_width="132dp"
		        android:layout_height="wrap_content"
		        android:text="@string/text7"
		        android:textSize="17sp" />
		    
		    <TextView
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		    	android:layout_weight="1"
		        android:textSize="19sp"
		        android:text="@string/link7"
		        android:textStyle="italic"
		        android:clickable="true"
		        android:onClick="goToStores" />
		   			    
		</LinearLayout>
		
	</LinearLayout>
	
</LinearLayout>